fix fonts jump issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,4 +30,9 @@ li {
 
 a:link {
   text-decoration: none;
+  cursor: pointer;
+}
+
+a:visited {
+  text-decoration: none;
 }
